crates/solidity/testing/snapshots/bindings_output/using/for_fixed_arrays/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[input.sol:5:1]
   │
 5 │ ╭─▶ using ArrayHelper for string[1];
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["ArrayHelper" @ input.sol:1:9] (library)
- Def: #2 ["asArray" @ input.sol:2:14] (function, type: function (string memory[] memory) returns void)
- Def: #3 ["items" @ input.sol:2:39] (parameter, type: string memory[] memory)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ library ArrayHelper {
   │         ─────┬─────  
   │              ╰─────── name: 1
 2 │     function asArray(string[1] memory items) internal {}
   │              ───┬───                  ──┬──  
   │                 ╰──────────────────────────── name: 2
   │                                         │    
   │                                         ╰──── name: 3
───╯
